Add first scene