@@ -11,3 +11,10 @@ javac -d ../classes com/themusicquiz/composants/Item.java
 javac -d ../classes com/themusicquiz/composants/Question.java
 javac -d ../classes com/themusicquiz/composants/QuestionSerie.java 
 javac -d ../classes com/themusicquiz/composants/Test.java
+
+#export your javafx path
+export PATH_TO_FX=/usr/share/java/openjfx-12.0.1_linux-x64_bin-sdk/javafx-sdk-12.0.1/lib
+#compile
+javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/Gui.java
+javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/Controller.java
+javac --module-path $PATH_TO_FX --add-modules javafx.controls -d ../classes com/themusicquiz/GUI/Main.java
